fix collapse style

--- a/components/collapse/style/index.less
+++ b/components/collapse/style/index.less
@@ -56,6 +56,7 @@
     }
     .@{collapsePrefixCls}-content {
       background: @neutral-2;
+      overflow: hidden;
       .@{collapsePrefixCls}-content-box {
         padding-left: 4*@grid;
         position: relative;
